[project]
name = "adoaler-sdk"
version = "1.0.0"
description = "Adoaler SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
flask = ["flask>=2.0.0"]
django = ["django>=4.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
